@@ -5,7 +5,7 @@
 //
 // tstColor
 //
-// This program demonstrates that SetColor() works with
+// This program demonstrates that setColor() works with
 // Set( _SET_COLOR ) and also that the internal representation
 // of a clipper color string is properly converted back to a
 // valid string.  It also shows that there can be any number of
@@ -22,8 +22,10 @@
 proc main
    Local cColor := "r+/bg*,rg*/ng+,w/n,b+/w,rg/b,w+/n*"
 
-? set(_SET_COLOR )
-? "original ", setcolor( cColor )
-? "input    ", cColor
-? "return   ", setcolor()
-? set(_SET_COLOR )
+? "original set ", set(_SET_COLOR )
+? "should match ", setColor( cColor )
+? "input 1      ", cColor
+? "return       ", setColor("1/7,9/15")
+? "input 2      ", "1/7,9/15"
+? "return       ", setColor()
+? "final set    ", set(_SET_COLOR )
